logging for training added & json modified
