# api_server/app/static/swagger.json
@@ -180,10 +180,10 @@
     "/model_training/model-training": {
       "post": {
         "summary": "API 2",
-        "description": "Training the model based on the usecase type",
+        "description": "Post data with input",
         "parameters": [
           {
-            "usecase_name": "name",
+            "name": "usecase_name",
             "in": "body",
             "required": true,
             "schema": {
@@ -198,7 +198,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Successful operation",
+            "description": "Successful Training",
             "schema": {
               "type": "object",
               "properties": {
@@ -209,11 +209,11 @@
             }
           },
           "500": {
-            "description": "Internal server error",
+            "description": "UnSuccessful Training",
             "schema": {
               "type": "object",
               "properties": {
-                "error": {
+                "msg": {
                   "type": "string"
                 }
               }
